force-app/main/default/objects/CEMS_Leave__c/fields/CEMS_Leave_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Leave_End_Date__c</fullName>
    <label>Leave End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>