force-app/main/default/objects/CEMS_Leave__c/fields/CEMS_Leave_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Leave_Start_Date__c</fullName>
    <label>Leave Start Date</label>
    <type>Date</type>
</CustomField>