force-app/main/default/objects/CEMS_Leave__c/fields/CEMS_Leave_Status__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Leave_Status__c</fullName>
    <label>Leave Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
                <default>true</default>
                <label>Applied</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>