force-app/main/default/objects/CEMS_Leave__c/fields/CEMS_Reason__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Reason__c</fullName>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>