force-app/main/default/objects/CEMS_Leave__c/fields/CEMS_Total_Leaves__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Total_Leaves__c</fullName>
    <label>CEMS Total Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>