force-app/main/default/objects/CEMS_Leave__c/fields/CEMS_Type_Of_Leave__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Type_Of_Leave__c</fullName>
    <label>Type Of Leave</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid Leave</fullName>
            </value>
            <value>
                <fullName>Loss Of pay</fullName>
            </value>
            <value>
                <fullName>Advanced Leave</fullName>
            </value>
            <value>
                <fullName>Bereavement Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>