force-app/main/default/objects/CEMS_Leave__c/fields/Emp_Email__c.field-meta.xml
<CustomField>
    <fullName>Emp_Email__c</fullName>
    <label>Emp Email</label>
    <type>Email</type>
</CustomField>