force-app/main/default/objects/CEMS_Leave__c/fields/Granted_Advanced_Leave__c.field-meta.xml
<CustomField>
    <fullName>Granted_Advanced_Leave__c</fullName>
    <label>Granted Advanced Leave</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>