force-app/main/default/objects/CEMS_Leave__c/fields/Granted_Paid_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Granted_Paid_Leaves__c</fullName>
    <label>Granted Paid Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>