force-app/main/default/objects/CEMS_Leave__c/validationRules/Leave_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>CEMS_Leave_Start_Date__c  &gt;=  CEMS_Leave_End_Date__c</errorConditionFormula>
    <errorDisplayField>CEMS_Leave_End_Date__c</errorDisplayField>
    <errorMessage>Check Start date and End date</errorMessage>
</ValidationRule>