force-app/main/default/objects/CEMS_Leave__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CEMS_Employee__c</columns>
    <columns>CEMS_Reason__c</columns>
    <columns>CEMS_Leave_End_Date__c</columns>
    <columns>CEMS_Leave_Start_Date__c</columns>
    <columns>CEMS_Type_Of_Leave__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>