force-app/main/default/objects/CEMS_Leave__c/listViews/New_View.listView-meta.xml
<ListView>
    <fullName>New_View</fullName>
    <columns>NAME</columns>
    <columns>CEMS_Employee__c</columns>
    <filterScope>Mine</filterScope>
    <label>New View</label>
</ListView>